Generate Alexa request headers and close wire callsite gaps
